--- a/build.gradle
+++ b/build.gradle
@@ -37,3 +37,7 @@ dependencyManagement {
 		mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
 	}
 }
+
+task wrapper(type: Wrapper) {
+    gradleVersion = '2.0'
+}
