--- a/build.gradle
+++ b/build.gradle
@@ -37,4 +37,6 @@ dependencyManagement {
 		mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
 	}
 }
-
+task wrapper(type: Wrapper) {
+    gradleVersion = '2.0'
+}
