--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,7 @@ buildscript {
 
 apply plugin: 'java'
 apply plugin: 'org.springframework.boot'
+apply plugin: 'io.spring.dependency-management'
 
 group = 'br.com.concrete.backend'
 version = '0.0.1-SNAPSHOT'
@@ -32,6 +33,7 @@ dependencies {
     compile('org.springframework.boot:spring-boot-starter-web')
     compile('org.springframework.boot:spring-boot-starter-data-jpa')
     runtime('org.springframework.boot:spring-boot-devtools')
+    runtime('org.springframework.boot:spring-boot-starter-actuator')
 
     compile group: 'com.google.code.gson', name: 'gson', version: '2.7'
     runtime('com.h2database:h2')
@@ -45,6 +47,8 @@ dependencies {
 
     testCompile('org.springframework.boot:spring-boot-starter-test')
     testCompile group: 'com.jayway.restassured', name: 'rest-assured', version: '2.9.0'
+
+    testCompile group: 'com.github.springtestdbunit', name: 'spring-test-dbunit', version: '1.3.0'
 }
 
 dependencyManagement {
